data/derived/sp14/progs/unify/prog2118.ml.out
Characters 25-29:
  let pipe = fun x -> fun2 fun1;;
                           ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
